# uavcan_ros_bridge

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml  release_packages.yaml  uavcan_ros_bridge.rosinstall
.github/workflows/: main.yml
cmake/: uavcan_ros_bridge-extras.cmake.in
dsdl/smarc_uavcan_services/: 200.ArmEmergencySystems.uavcan
dsdl/uavcan_ros_bridge/: SensorPressure.uavcan
include/uavcan_ros_bridge/: uavcan_ros_bridge.h
include/uavcan_ros_bridge/ros_to_uav/: ballast_angles.h  command.h  percent_stamped.h  rpm_command.h
include/uavcan_ros_bridge/uav_to_ros/: actuator_status.h  esc_status.h  gps_fix.h  imu.h  magnetic_field.h  sensor_pressure.h
launch/: bridge.launch
msg/: CircuitStatus.msg  UavcanNodeStatusArray.msg
smarc_uavcan_services/: 200.ArmEmergencySystems.uavcan
src/: ros_to_uavcan_bridge.cpp  ros_to_uavcan_services.cpp  uavcan_platform_linux.cpp  uavcan_to_ros_bridge.cpp
src/ros_to_uav/: ballast_angles.cpp  command.cpp  percent_stamped.cpp  uavcan_node_info.cpp  uavcan_restart.cpp  uavcan_transport_stats.cpp
src/uav_to_ros/: actuator_status.cpp  battery_state.cpp  esc_status.cpp  gps_fix.cpp  imu.cpp  magnetic_field.cpp  sensor_pressure.cpp
srv/: UavcanRestartNode.srv
uavcan_ros_bridge/: CMakeLists.txt  package.xml
uavcan_ros_bridge/cmake/: uavcan_ros_bridge-extras.cmake.in
uavcan_ros_bridge/src/: ros_to_uavcan_services.cpp  uavcan_platform_linux.cpp  uavcan_to_ros_bridge.cpp
uavcan_ros_msgs/: CMakeLists.txt  package.xml
uavcan_ros_msgs/msg/: ESCStatus.msg  UavcanNodeStatus.msg  UavcanNodeStatusNamed.msg  UavcanNodeStatusNamedArray.msg
uavcan_ros_msgs/srv/: UavcanGetDataTypeInfo.srv  UavcanGetNodeInfo.srv  UavcanGetTransportStats.srv  UavcanRestartNode.srv
(+24 files in other folders)
